cleaned up api vs router
