# src/api/index.ts
@@ -1,0 +1,3 @@
+import { customerApi } from "./customers";
+import { ping, versions } from "./utils";
+export { ping, versions, customerApi };
