# src/swagger.json
@@ -28,6 +28,22 @@
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
+    "/": {
+      "get": {
+        "tags": ["root"],
+        "summary": "Get API Version Information",
+        "description": "Returns a list of the available API versions",
+        "operationId": "versions",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": { "schema": { "$ref": "#/definitions/schemas/ArrayOfVersions" } }
+            }
+          }
+        }
+      }
+    },
     "/customers": {
       "get": {
         "tags": ["Customers"],
@@ -174,6 +190,29 @@
     }
   },
   "definitions": {
+    "schemas": {
+      "APIVersion": {
+        "type": "object",
+        "properties": {
+          "version": { "type": "integer", "format": "int64" },
+          "path": { "type": "string" }
+        }
+      },
+      "ServerInfo": {
+        "type": "object",
+        "properties": {
+          "name": { "type": "string" },
+          "description": { "type": "string" },
+          "version": { "type": "string" },
+          "uptime": { "type": "number" }
+        }
+      },
+      "ArrayOfVersions": {
+        "type": "array",
+        "items": { "$ref": "#/components/schemas/APIVersion" }
+      }
+    },
+
     "id": {
       "properties": {
         "uuid": {
